fixing various related issues

--- a/maven-plugins/openapi-jersey2-plugin/src/test/resources/sample2.yaml
+++ b/maven-plugins/openapi-jersey2-plugin/src/test/resources/sample2.yaml
@@ -37,6 +37,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/AeItemVO"
+        "207":
+          description: "upcoming events"
+          content:
+            test/csv:
+              schema:
+                type: string
   /api/v1/test2:
     put:
       operationId: getTest2
